# PyStats

./: .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: pypi-upload.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  pystats.rst  syntax_notes.rst
docs/source/api/: Bernoulli.rst  Beta.rst  Binomial.rst  Cauchy.rst  Chi-Squared.rst  Exponential.rst  F.rst  Gamma.rst  Inverse-Gamma.rst  Laplace.rst  Log-Normal.rst  Logistic.rst  Normal.rst  Poisson.rst  T.rst  Uniform.rst  Weibull.rst  bernoulli.rst  index.rst  index_dist.rst  index_other.rst
examples/: Binomial Coin-Flipping.py  Binomial Quiz.py  Confidence Interval.py  F-test.py  Normal Distribution.py  p-value.py  t-test One Sample.py  t-test Two Samples (Equal Variances).py  t-test Two Samples (Unequal Variances).py
include/: Distributions.h  Utils.h
src/: Bernoulli.cpp  Beta.cpp  Binomial.cpp  Cauchy.cpp  ChiSquared.cpp  Exponential.cpp  F.cpp  Gamma.cpp  InvGamma.cpp  Inverse-Gamma.cpp  Laplace.cpp  Log-Normal.cpp  Logistic.cpp  Normal.cpp  Poisson.cpp  StudentT.cpp  T.cpp  Uniform.cpp  Utils.cpp  Utils.h  Weibull.cpp  pystats.cpp
